# seeg_accuracy_2025

./: .gitignore  README.md  SEEG_accuracy_2025.ipynb  hello.py  pyproject.toml
data/: error_metrics.xlsx  trajectory_analysis_summary.xlsx  trajectory_analysis_thresh_10mm.xlsx
data/clinical_info_new/: sub-D098_clinical_info.csv  sub-D099_clinical_info.csv  sub-D100_clinical_info.csv  sub-D101_clinical_info.csv  sub-D103_clinical_info.csv  sub-D105_clinical_info.csv  sub-D106_clinical_info.csv  sub-D108_clinical_info.csv  sub-D109_clinical_info.csv  sub-D110_clinical_info.csv  sub-D111_clinical_info.csv  sub-D112_clinical_info.csv  sub-D113_clinical_info.csv  sub-D114_clinical_info.csv  sub-D117_clinical_info.csv  sub-D119_clinical_info.csv  sub-D128_clinical_info.csv  sub-D129_clinical_info.csv  sub-D130_clinical_info.csv  sub-D131_clinical_info.csv  sub-D132_clinical_info.csv  sub-D133_clinical_info.csv  sub-D134_clinical_info.csv  sub-D135_clinical_info.csv  sub-D136_clinical_info.csv  sub-D137_clinical_info.csv  sub-D138_clinical_info.csv  sub-D139_clinical_info.csv  sub-D140_clinical_info.csv  sub-D142_clinical_info.csv  sub-D144_clinical_info.csv  sub-D146_clinical_info.csv  sub-D147_clinical_info.csv  sub-D148_clinical_info.csv  sub-D149_clinical_info.csv  sub-D150_clinical_info.csv  sub-D151_clinical_info.csv  sub-D152_clinical_info.csv  (+218 more)
fcsv_files/: 2025_SEEG_frame_accuracy.csv
notebook/: SEEG_accuracy_2025.ipynb  master_analysis.ipynb  seeg_utils.py
output/: 2025_SEEG_robot_accuracy.csv  2025_SEEG_robot_accuracy_MNIcoords.csv  mesh_angle_calculation.csv
(+4150 files in other folders)
