[project]
name = "seeg-accuracy-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "itables>=2.4.0",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "statannotations>=0.7.2",
    "statistics>=1.0.3.5",
]
